# llm_tuning_project

./: .gitignore  README.md  pyproject.toml  requirements.txt
data/: test_texts.txt
experiments/02/: baseline_performance.py  chosen_val_ids.pkl  evaluation.ipynb  flops.ipynb  forecast_2025-03-23_12-10-01.csv  forecast_2025-03-24_14-04-11.txt  results.ipynb  val_ids_subset.json  val_subset_forecast.txt  visualisation.ipynb
experiments/03/a/: default_lora.py  evaluation.py  flops.ipynb  forecast_2025-03-24_15-53-58.csv  forecast_2025-03-25_11-01-24.txt  results.ipynb  val_ids_subsubset.json  wandb.ipynb
experiments/03/b/: expt_0_config.json  expt_1_config.json  expt_2_config.json  expt_3_config.json  expt_6_config.json  expt_8_config.json  hyper1.py
experiments/03/c/: evaluation.py  final.py  final_config.json  flops.ipynb  results.ipynb  (+2 more)
m2_cw/: __init__.py  lora_skeleton.py  preprocessor.py  version.py
m2_cw/flops/: __init__.py  flops.py
m2_cw/inference/: __init__.py  evaluation.py  metrics.py  utils.py  visualisation.py
m2_cw/lora/: __init__.py  lora.py  training.py
m2_cw/preprocessing/: __init__.py  preprocessor.py  series.py
m2_cw/qwen/: __init__.py  qwen.py
notebooks/: baseline.ipynb  checking_out_darts.ipynb  data_inspection.ipynb
notebooks/01/: deconstructed_generation.ipynb  flops.ipynb  model_inspection.ipynb
notebooks/02/: baseline.ipynb  data_inspection.ipynb  preprocess.ipynb
notebooks/03/: token_null.ipynb
notebooks/reducing_vocabulary/: reduce_vocabulary.ipynb  test_reduced_vocabulary.ipynb
src/notebooks/: data_inspection.ipynb
(+40 files in other folders)
